--- a/scene1.html
+++ b/scene1.html
@@ -177,7 +177,7 @@
                     
                     // Configurar luces
                     const box = new THREE.Box3().setFromObject(model);
-                    const center = box.getCenter(new THREE.Vector3());
+                    const center = box.getCenter(new THREE.Vector3());onWindowResize
                     setupInteriorLighting(center);
                 },
                 undefined,
