--- a/scene1.html
+++ b/scene1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navegación en VR Study Room</title>
+    <title>VR Study Room con Colisiones</title>
     <style>
         body { margin: 0; overflow: hidden; font-family: Arial, sans-serif; }
         canvas { display: block; width: 100%; height: 100%; }
@@ -66,119 +66,171 @@
         <button id="startButton">Comenzar Experiencia</button>
     </div>
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/build/three.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/controls/PointerLockControls.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/three@0.132.2/examples/js/loaders/GLTFLoader.js"></script>
+
 <script>
-let camera, scene, renderer, controls, model;
-let moveForward = false, moveBackward = false, moveLeft = false, moveRight = false;
-let canJump = false;
-const velocity = new THREE.Vector3();
-const direction = new THREE.Vector3();
-const vertex = new THREE.Vector3();
-const color = new THREE.Color();
-const raycaster = new THREE.Raycaster();
-const objects = [];
-let prevTime = performance.now();
+    let camera, scene, renderer, controls, model;
+    let moveForward = false, moveBackward = false, moveLeft = false, moveRight = false, canJump = false;
+    const velocity = new THREE.Vector3();
+    const direction = new THREE.Vector3();
+    const collisionObjects = [];
 
-init();
-animate();
+    init();
+    animate();
 
-function init() {
-    camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-    camera.position.y = 1.6;
-    scene = new THREE.Scene();
-    scene.background = new THREE.Color(0x000000);
-    scene.fog = new THREE.FogExp2(0x000000, 0.001);
-    renderer = new THREE.WebGLRenderer({ antialias: true });
-    renderer.setPixelRatio(window.devicePixelRatio);
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
-    controls = new THREE.PointerLockControls(camera, document.body);
-    const blocker = document.getElementById('blocker');
-    const instructions = document.getElementById('instructions');
-    const startButton = document.getElementById('startButton');
-    startButton.addEventListener('click', () => controls.lock());
-    controls.addEventListener('lock', () => { instructions.style.display = 'none'; blocker.style.display = 'none'; });
-    controls.addEventListener('unlock', () => { blocker.style.display = 'block'; instructions.style.display = ''; });
-    document.addEventListener('keydown', onKeyDown);
-    document.addEventListener('keyup', onKeyUp);
-    const loader = new THREE.GLTFLoader();
-    loader.load('vr_new_study_room.glb', (gltf) => {
-        model = gltf.scene;
-        scene.add(model);
-        model.traverse(child => { if (child.isMesh) objects.push(child); });
-        console.log('Modelo cargado con', objects.length, 'objetos colisionables.');
-    }, undefined, (error) => {
-        console.error('Error al cargar el modelo:', error);
-        document.getElementById('info').textContent = 'Error al cargar el modelo vr_new_study_room.glb';
-    });
-    const ambientLight = new THREE.AmbientLight(0x404040);
-    scene.add(ambientLight);
-    const directionalLight = new THREE.DirectionalLight(0xffffff, 0.8);
-    directionalLight.position.set(1, 1, 1).normalize();
-    scene.add(directionalLight);
-    window.addEventListener('resize', onWindowResize);
-}
+    function init() {
+        camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        camera.position.y = 1.6;
 
-function onWindowResize() {
-    camera.aspect = window.innerWidth / window.innerHeight;
-    camera.updateProjectionMatrix();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-}
+        scene = new THREE.Scene();
+        scene.background = new THREE.Color(0x000000);
+        scene.fog = new THREE.FogExp2(0x000000, 0.001);
 
-function onKeyDown(event) {
-    switch (event.code) {
-        case 'ArrowUp': case 'KeyW': moveForward = true; break;
-        case 'ArrowLeft': case 'KeyA': moveLeft = true; break;
-        case 'ArrowDown': case 'KeyS': moveBackward = true; break;
-        case 'ArrowRight': case 'KeyD': moveRight = true; break;
-        case 'Space': if (canJump) { velocity.y += 0.25; canJump = false; } break;
+        renderer = new THREE.WebGLRenderer({ antialias: true });
+        renderer.setPixelRatio(window.devicePixelRatio);
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
+
+        controls = new THREE.PointerLockControls(camera, document.body);
+
+        const blocker = document.getElementById('blocker');
+        const instructions = document.getElementById('instructions');
+        const startButton = document.getElementById('startButton');
+
+        startButton.addEventListener('click', function() {
+            controls.lock();
+        });
+
+        controls.addEventListener('lock', function() {
+            instructions.style.display = 'none';
+            blocker.style.display = 'none';
+        });
+
+        controls.addEventListener('unlock', function() {
+            blocker.style.display = 'block';
+            instructions.style.display = '';
+        });
+
+        document.addEventListener('keydown', onKeyDown);
+        document.addEventListener('keyup', onKeyUp);
+
+        const loader = new THREE.GLTFLoader();
+        loader.load(
+            'vr_new_study_room.glb',
+            function(gltf) {
+                model = gltf.scene;
+                scene.add(model);
+
+                // Añadir todos los meshes a la lista de colisiones
+                model.traverse(function(child) {
+                    if (child.isMesh) {
+                        collisionObjects.push(child);
+                    }
+                });
+
+                console.log('Modelo cargado y objetos de colisión registrados:', collisionObjects);
+            },
+            undefined,
+            function(error) {
+                console.error('Error al cargar el modelo:', error);
+                document.getElementById('info').textContent = 'Error al cargar el modelo';
+            }
+        );
+
+        const ambientLight = new THREE.AmbientLight(0x404040);
+        scene.add(ambientLight);
+
+        const directionalLight = new THREE.DirectionalLight(0xffffff, 0.8);
+        directionalLight.position.set(1, 1, 1).normalize();
+        scene.add(directionalLight);
+
+        window.addEventListener('resize', onWindowResize);
     }
-}
 
-function onKeyUp(event) {
-    switch (event.code) {
-        case 'ArrowUp': case 'KeyW': moveForward = false; break;
-        case 'ArrowLeft': case 'KeyA': moveLeft = false; break;
-        case 'ArrowDown': case 'KeyS': moveBackward = false; break;
-        case 'ArrowRight': case 'KeyD': moveRight = false; break;
+    function onWindowResize() {
+        camera.aspect = window.innerWidth / window.innerHeight;
+        camera.updateProjectionMatrix();
+        renderer.setSize(window.innerWidth, window.innerHeight);
     }
-}
 
-function animate() {
-    requestAnimationFrame(animate);
-    const time = performance.now();
-    const delta = (time - prevTime) / 1000;
-    if (controls.isLocked) {
-        raycaster.ray.origin.copy(controls.getObject().position);
-        raycaster.ray.origin.y -= 1.6;
-        const intersections = raycaster.intersectObjects(objects);
-        const onObject = intersections.length > 0;
-        velocity.x -= velocity.x * 10.0 * delta;
-        velocity.z -= velocity.z * 10.0 * delta;
-        velocity.y -= 9.8 * 5.0 * delta;
-        direction.z = Number(moveForward) - Number(moveBackward);
-        direction.x = Number(moveRight) - Number(moveLeft);
-        direction.normalize();
-        if (moveForward || moveBackward) velocity.z -= direction.z * 5.0 * delta;
-        if (moveLeft || moveRight) velocity.x -= direction.x * 5.0 * delta;
-        if (onObject) {
-            velocity.y = Math.max(0, velocity.y);
-            canJump = true;
+    function onKeyDown(event) {
+        switch (event.code) {
+            case 'ArrowUp':
+            case 'KeyW':
+                moveForward = true;
+                break;
+            case 'ArrowLeft':
+            case 'KeyA':
+                moveLeft = true;
+                break;
+            case 'ArrowDown':
+            case 'KeyS':
+                moveBackward = true;
+                break;
+            case 'ArrowRight':
+            case 'KeyD':
+                moveRight = true;
+                break;
+            case 'Space':
+                if (canJump === true) velocity.y += 0.25;
+                canJump = false;
+                break;
         }
-        controls.moveRight(-velocity.x * delta);
-        controls.moveForward(-velocity.z * delta);
-        controls.getObject().position.y += velocity.y * delta;
-        if (controls.getObject().position.y < 1.6) {
-            velocity.y = 0;
-            controls.getObject().position.y = 1.6;
-            canJump = true;
+    }
+
+    function onKeyUp(event) {
+        switch (event.code) {
+            case 'ArrowUp':
+            case 'KeyW':
+                moveForward = false;
+                break;
+            case 'ArrowLeft':
+            case 'KeyA':
+                moveLeft = false;
+                break;
+            case 'ArrowDown':
+            case 'KeyS':
+                moveBackward = false;
+                break;
+            case 'ArrowRight':
+            case 'KeyD':
+                moveRight = false;
+                break;
         }
     }
-    prevTime = time;
-    renderer.render(scene, camera);
-}
+
+    function animate() {
+        requestAnimationFrame(animate);
+
+        if (controls.isLocked === true) {
+            const delta = 0.1;
+            velocity.x -= velocity.x * 10.0 * delta;
+            velocity.z -= velocity.z * 10.0 * delta;
+
+            direction.z = Number(moveForward) - Number(moveBackward);
+            direction.x = Number(moveRight) - Number(moveLeft);
+            direction.normalize();
+
+            const raycaster = new THREE.Raycaster();
+            const collisionDistance = 0.5;
+            const forward = new THREE.Vector3(0, 0, -1).applyQuaternion(camera.quaternion);
+            raycaster.set(camera.position, forward);
+            const intersects = raycaster.intersectObjects(collisionObjects, true);
+
+            if (!(intersects.length > 0 && intersects[0].distance < collisionDistance)) {
+                if (moveForward || moveBackward) velocity.z -= direction.z * 5.0 * delta;
+                if (moveLeft || moveRight) velocity.x -= direction.x * 5.0 * delta;
+
+                controls.moveRight(-velocity.x * delta);
+                controls.moveForward(-velocity.z * delta);
+            }
+        }
+
+        renderer.render(scene, camera);
+    }
 </script>
 </body>
 </html>
